Spacing fix

--- a/app/static/styles/global.css
+++ b/app/static/styles/global.css
@@ -125,28 +125,28 @@ h5 {
 .subtitle {
 	font-family: 'JetBrains Mono', monospace;
 	color: var(--body-color);
-	font-size: clamp(.8rem, 2.5vw, 1rem);
+	font-size: clamp(0.8rem, 2.5vw, 1rem);
 }
 
 p {
 	font-family: 'JetBrains Mono', monospace;
 	color: var(--body-color);
-	font-size: clamp(.8rem, 2.5vw, 1rem);
+	font-size: clamp(0.8rem, 2.5vw, 1rem);
 	line-height: 140%;
-	margin-bottom: .9rem;
+	margin-bottom: 0.9rem;
 }
 
 li {
 	font-family: 'JetBrains Mono', monospace;
 	color: var(--body-color);
-	font-size: clamp(.8rem, 2.5vw, 1rem);
+	font-size: clamp(0.8rem, 2.5vw, 1rem);
 }
 
 a {
 	text-decoration: none;
 	font-family: 'JetBrains Mono', monospace;
 	color: var(--body-color);
-	font-size: clamp(.8rem, 2.5vw, 1rem);
+	font-size: clamp(0.8rem, 2.5vw, 1rem);
 	margin: 0;
 	padding: 0;
 }
@@ -268,6 +268,11 @@ video {
 	/* padding-top: 10dvh; */
 }
 
+.case-study {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 /* section titles */
 .case-study__section-title {
 	padding: 8px 40px;
@@ -288,6 +293,17 @@ video {
 	grid-template-rows: auto;
 	margin-bottom: 10vh;
 	column-gap: 10rem;
+	row-gap: 3rem;
+}
+
+@media (max-width: 760px) {
+	.case-study__container {
+		grid-template-columns: 1fr;
+	}
+	.case-study section {
+		padding-top: 0;
+		padding-bottom: 0;
+	}
 }
 
 .case-study__flex {
